# LexScheduler

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yml
data/animal_food/: test.json  train.json
src/: chat_composer.py  constants.py  dispatcher.py  llm.py  llm_test.py  main.py
src/proceeding-dispatcher/: dispatcher.py
tests/: test_dispatcher.py  test_llm.py
