[project]
name = "proceeding-dispatcher"
version = "0.1.0"
description = "An LLM-powered legal proceeding dispatcher."
authors = [{name = "Emilio Maddalena", email = "emilio.tanowe.maddalena@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.4.5",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.8.2",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
include = ["pyproject.toml", "gp_retouch/**/*.py", "tests/**/*.py"]
line-length = 100

[tool.ruff.lint]
select = ["D", "N", "I", "E501", "E"]
ignore = ["ANN", "D410", "D413", "D100", "D211", "D213", "D203"]
exclude = [
    "**/__init__.py",
    "notebooks/",  # Ignore build artifacts
    "docs/",   # Ignore documentation files
]
